[Resources.ProcessRuntime] Rename processruntime detector namespace (#1767)
Co-authored-by: Mikel Blanchard <mblanchard@macrosssoftware.com>

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -52,9 +52,9 @@ body:
         - OpenTelemetry.ResourceDetectors.Azure
         - OpenTelemetry.ResourceDetectors.Container
         - OpenTelemetry.ResourceDetectors.Host
-        - OpenTelemetry.ResourceDetectors.ProcessRuntime
         - OpenTelemetry.Resources.Gcp
         - OpenTelemetry.Resources.Process
+        - OpenTelemetry.Resources.ProcessRuntime
         - OpenTelemetry.Sampler.AWS
         - OpenTelemetry.SemanticConventions
     validations:
