--- a/.github/workflows/core-version-update.yml
+++ b/.github/workflows/core-version-update.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: windows-latest
 
     steps:
+    - uses: actions/checkout@v4
+
     - name: Update core version
       shell: pwsh
       run: |
