--- a/.github/workflows/core-version-update.yml
+++ b/.github/workflows/core-version-update.yml
@@ -18,6 +18,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        # Note: By default GitHub only fetches 1 commit. MinVer needs to find
+        # the version tag which is typically NOT on the first commit so we
+        # retrieve them all.
+        fetch-depth: 0
 
     - name: Update core version
       shell: pwsh
