--- a/.github/workflows/core-version-update.yml
+++ b/.github/workflows/core-version-update.yml
@@ -9,6 +9,7 @@ on:
         type: string
 
 permissions:
+  contents: write
   pull-requests: write
 
 jobs:
@@ -24,10 +25,12 @@ jobs:
         # retrieve them all.
         fetch-depth: 0
 
-    - name: Update core version
+    - name: Create GitHub Pull Request to update OpenTelemetryCoreLatestVersion and update CHANGELOGs in projects
       shell: pwsh
       run: |
         Import-Module .\build\scripts\post-release.psm1
 
         CreateOpenTelemetryCoreLatestVersionUpdatePullRequest `
           -tag '${{ inputs.tag }}'
+      env:
+        GH_TOKEN: ${{ github.token }}
