[repo] Refactor CI to use Component.proj (#1811)
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Piotr Kiełkowicz <pkiekowicz@splunk.com>

--- a/.github/workflows/Component.BuildTest.yml
+++ b/.github/workflows/Component.BuildTest.yml
@@ -35,26 +35,57 @@ jobs:
           version: net462
 
     runs-on: ${{ matrix.os }}
+
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-depth: 0 # fetching all, to be able to calculate package version
+        # Note: By default GitHub only fetches 1 commit. MinVer needs to find
+        # the version tag which is typically NOT on the first commit so we
+        # retrieve them all.
+        fetch-depth: 0
+
+    - name: Resolve project
+      id: resolve-project
+      shell: pwsh
+      run: |
+        Import-Module .\build\scripts\build.psm1
+
+        # Note: inputs.project-name is either a .proj file or
+        # Component[component_name]. The ResolveProject call here parses
+        # inputs.project-name into variables we need for build.
+
+        $title = '' # Used for friendly names in action UI
+        $project = '' # Actual project passed to dotnet
+        $component = '' # Used to tell Component.proj what to build
+
+        ResolveProject `
+          -projectNameOrComponentData '${{ inputs.project-name }}' `
+          -title ([ref]$title) `
+          -project ([ref]$project) `
+          -component ([ref]$component)
+
+        echo "title=$title" >> $env:GITHUB_OUTPUT
+        echo "project=$project" >> $env:GITHUB_OUTPUT
+
+        # Note: BUILD_COMPONENT envvar tells Component.proj what to build. Only
+        # used if $project ends up Component.proj.
+        echo "BUILD_COMPONENT=$component" >> $env:GITHUB_ENV
 
     - name: Setup dotnet
       uses: actions/setup-dotnet@v4
 
-    - name: dotnet restore build/Projects/${{ inputs.project-name }}.proj
-      run: dotnet restore build/Projects/${{ inputs.project-name }}.proj -p:EnablePackageValidation=true
+    - name: dotnet restore ${{ steps.resolve-project.outputs.title }}
+      run: dotnet restore ${{ steps.resolve-project.outputs.project }} -p:EnablePackageValidation=true
 
-    - name: dotnet build build/Projects/${{ inputs.project-name }}.proj
-      run: dotnet build build/Projects/${{ inputs.project-name }}.proj --configuration Release --no-restore
+    - name: dotnet build ${{ steps.resolve-project.outputs.title }}
+      run: dotnet build ${{ steps.resolve-project.outputs.project }} --configuration Release --no-restore
 
-    - name: dotnet test build/Projects/${{ inputs.project-name }}.proj
-      run: dotnet test build/Projects/${{ inputs.project-name }}.proj --collect:"Code Coverage" --results-directory:TestResults --framework ${{ matrix.version }} --configuration Release --no-restore --no-build --logger:"console;verbosity=detailed" -- RunConfiguration.DisableAppDomain=true
+    - name: dotnet test ${{ steps.resolve-project.outputs.title }}
+      run: dotnet test ${{ steps.resolve-project.outputs.project }} --collect:"Code Coverage" --results-directory:TestResults --framework ${{ matrix.version }} --configuration Release --no-restore --no-build --logger:"console;verbosity=detailed" -- RunConfiguration.DisableAppDomain=true
 
-    - name: dotnet pack build/Projects/${{ inputs.project-name }}.proj
+    - name: dotnet pack ${{ steps.resolve-project.outputs.title }}
       if: ${{ matrix.os == 'windows-latest' }}
-      run: dotnet pack build/Projects/${{ inputs.project-name }}.proj --configuration Release --no-restore --no-build -p:EnablePackageValidation=true
+      run: dotnet pack ${{ steps.resolve-project.outputs.project }} --configuration Release --no-restore --no-build -p:EnablePackageValidation=true
 
     - name: Install coverage tool
       run: dotnet tool install -g dotnet-coverage
