--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -51,7 +51,7 @@ body:
         - OpenTelemetry.ResourceDetectors.AWS
         - OpenTelemetry.ResourceDetectors.Azure
         - OpenTelemetry.ResourceDetectors.Container
-        - OpenTelemetry.ResourceDetectors.Host
+        - OpenTelemetry.Resources.Host
         - OpenTelemetry.Resources.Gcp
         - OpenTelemetry.Resources.Process
         - OpenTelemetry.Resources.ProcessRuntime
