--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -124,10 +124,10 @@ flags:
     paths:
       - src/OpenTelemetry.Resources.Gcp
 
-  unittests-ResourceDetectors.Host:
+  unittests-Resources.Host:
     carryforward: true
     paths:
-      - src/OpenTelemetry.ResourceDetectors.Host
+      - src/OpenTelemetry.Resources.Host
 
   unittests-Resources.Process:
     carryforward: true
