--- a/src/OpenTelemetry.Resources.Host/OpenTelemetry.Resources.Host.csproj
+++ b/src/OpenTelemetry.Resources.Host/OpenTelemetry.Resources.Host.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="$(RepoRoot)\src\Shared\Guard.cs" Link="Includes\Guard.cs" />
     <Compile Include="$(RepoRoot)\src\Shared\ExceptionExtensions.cs" Link="Includes\ExceptionExtensions.cs" />
   </ItemGroup>
 </Project>
