Update component_owners.yml for aws projects
- (temporarily) remove atshaw43.
- add ppittle to additional aws project.

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -23,13 +23,11 @@ components:
     - mikegoldsmith
   src/OpenTelemetry.Extensions.AWS/:
     - srprash
-    - atshaw43
     - ppittle
   src/OpenTelemetry.Extensions.Enrichment/:
     - xakep139
   src/OpenTelemetry.Instrumentation.AWS/:
     - srprash
-    - atshaw43
     - ppittle
   src/OpenTelemetry.Instrumentation.AWSLambda/:
     - rypdal
@@ -63,7 +61,6 @@ components:
     - vishweshbankwar
   src/OpenTelemetry.ResourceDetectors.AWS/:
     - srprash
-    - atshaw43
     - ppittle
   src/OpenTelemetry.ResourceDetectors.Azure/:
     - rajkumar-rangaraj
@@ -84,7 +81,6 @@ components:
     - pyohannes
   src/OpenTelemetry.Sampler.AWS/:
     - srprash
-    - atshaw43
     - ppittle
   test/OpenTelemetry.Exporter.Geneva.Benchmark/:
     - cijothomas
@@ -121,13 +117,12 @@ components:
     - mikegoldsmith
   test/OpenTelemetry.Extensions.AWS.Tests/:
     - srprash
-    - atshaw43
     - ppittle
   test/OpenTelemetry.Extensions.Enrichment.Tests/:
     - xakep139
   test/OpenTelemetry.Instrumentation.AWS.Tests/:
     - srprash
-    - atshaw43
+    - ppittle
   test/OpenTelemetry.Instrumentation.AWSLambda.Tests/:
     - rypdal
     - Oberon00
@@ -156,7 +151,6 @@ components:
     - vishweshbankwar
   test/OpenTelemetry.ResourceDetectors.AWS.Tests/:
     - srprash
-    - atshaw43
     - ppittle
   test/OpenTelemetry.ResourceDetectors.Azure.Tests/:
     - rajkumar-rangaraj
@@ -177,5 +171,4 @@ components:
     - pyohannes
   test/OpenTelemetry.Sampler.AWS.Tests/:
     - srprash
-    - atshaw43
     - ppittle
