--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -51,8 +51,8 @@ body:
         - OpenTelemetry.ResourceDetectors.AWS
         - OpenTelemetry.ResourceDetectors.Azure
         - OpenTelemetry.ResourceDetectors.Container
-        - OpenTelemetry.ResourceDetectors.Host
         - OpenTelemetry.Resources.Gcp
+        - OpenTelemetry.Resources.Host
         - OpenTelemetry.Resources.Process
         - OpenTelemetry.Resources.ProcessRuntime
         - OpenTelemetry.Sampler.AWS
