--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -67,7 +67,7 @@ components:
     - vishweshbankwar
   src/OpenTelemetry.ResourceDetectors.Container/:
     - iskiselev
-  src/OpenTelemetry.ResourceDetectors.Host/:
+  src/OpenTelemetry.Resources.Host/:
     - Kielek
     - lachmatt
   src/OpenTelemetry.Resources.Process/:
@@ -157,7 +157,7 @@ components:
     - vishweshbankwar
   test/OpenTelemetry.ResourceDetectors.Container.Tests/:
     - iskiselev
-  test/OpenTelemetry.ResourceDetectors.Host.Tests/:
+  test/OpenTelemetry.Resources.Host.Tests/:
     - Kielek
     - lachmatt
   test/OpenTelemetry.Resources.Process.Tests/:
