--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -49,8 +49,8 @@ body:
         - OpenTelemetry.PersistentStorage.Abstractions
         - OpenTelemetry.PersistentStorage.FileSystem
         - OpenTelemetry.ResourceDetectors.AWS
-        - OpenTelemetry.ResourceDetectors.Azure
         - OpenTelemetry.ResourceDetectors.Container
+        - OpenTelemetry.Resources.Azure
         - OpenTelemetry.Resources.Gcp
         - OpenTelemetry.Resources.Host
         - OpenTelemetry.Resources.Process
