--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -114,10 +114,10 @@ flags:
       - src/OpenTelemetry.PersistentStorage.Abstractions
       - src/OpenTelemetry.PersistentStorage.FileSystem
 
-  unittests-ResourceDetectors.Azure:
+  unittests-Resources.Azure:
     carryforward: true
     paths:
-      - src/OpenTelemetry.ResourceDetectors.Azure
+      - src/OpenTelemetry.Resources.Azure
 
   unittests-Resources.Gcp:
     carryforward: true
